feat: update post

--- a/_posts/2025-06-07-GSM-ESO.md
+++ b/_posts/2025-06-07-GSM-ESO.md
@@ -24,7 +24,7 @@ tags: [Security, Operator]
 👉 先賦予 GSA 權限同時，綁定 KSA
 這邊是透過 IaC(terragrunt) 的方式，建立 GSA 賦予權限，並且綁定 KSA
 
-```tf=
+```tf
 # main.tf
 
 resource "google_service_account" "sa" {
@@ -49,7 +49,7 @@ resource "google_service_account_iam_member" "workload_identity" {
 }
 ```
 
-```hcl=
+```hcl
 # terragrunt.hcl
 
   project_roles = [
@@ -66,7 +66,7 @@ resource "google_service_account_iam_member" "workload_identity" {
 可以參考 [ArtifaceHub](https://artifacthub.io/packages/helm/external-secrets-operator/external-secrets?modal=values&path=webhook.serviceAccount) 與 [Github](https://github.com/external-secrets/external-secrets/blob/main/deploy/charts/external-secrets/templates/serviceaccount.yaml)
 找到怎麼設定
 
-```yaml=
+```yaml
 serviceAccount:
   create: true
   annotations:
@@ -79,7 +79,7 @@ serviceAccount:
 1. project: GCP project-id
 2. clusterLocation: GKE location
 3. clusterName: GKE cluster name
-```yaml=
+```yaml
 # ClusterSecretStore.yaml
 
 {{- with .Values.createClusterSecretStore }}
@@ -104,7 +104,7 @@ spec:
 ```
 
 到這邊，應該可以看到上面這個 ClusterSecretStore 的狀態要是 True
-```bash=
+```bash
 # 範例
 
 kubectl get clustersecretstores.external-secrets.io 
@@ -123,7 +123,7 @@ gcp-secret-manager   117m   Valid    ReadWrite      True
 4. dataFrom: 資料來源(GSM 的 secret name)
 
 
-```yaml=
+```yaml
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
@@ -144,7 +144,7 @@ spec:
 ```
 
 後續 ESO 會透過上述設定，到 GSM 取值，並依照 ExternalSecret 的設定，到指定 ns 建立 secret
-```bash=
+```bash
 # 範例
 
 kubectl -n cosparks describe secret kk   
@@ -165,7 +165,7 @@ ping:  4 bytes
 
 👉 並確認服務有吃到參數
 ![demo](../assets/post/security/demo.png)
-```javascript=
+```javascript
 const dotenv = require('dotenv');
 dotenv.config();
 
