--- a/_posts/2025-05-27-GSM-ESO.md
+++ b/_posts/2025-05-27-GSM-ESO.md
@@ -61,9 +61,9 @@ resource "google_service_account_iam_member" "workload_identity" {
 ```
 
 ### ESO 部署
-這邊要告訴 KSA 需要去找哪個 GSA 要權限
+這邊要指明 KSA 所對應的 GSA 權限來源
 
-可以參考 [ArtifaceHub](https://artifacthub.io/packages/helm/external-secrets-operator/external-secrets?modal=values&path=webhook.serviceAccount) 與 [Github](https://github.com/external-secrets/external-secrets/blob/main/deploy/charts/external-secrets/templates/serviceaccount.yaml)
+可以參考 [ArtifactHub](https://artifacthub.io/packages/helm/external-secrets-operator/external-secrets?modal=values&path=webhook.serviceAccount) 與 [Github](https://github.com/external-secrets/external-secrets/blob/main/deploy/charts/external-secrets/templates/serviceaccount.yaml)
 找到怎麼設定
 
 ```yaml
@@ -130,7 +130,7 @@ metadata:
   name: {{ .name }}
   namespace: {{ .namespace }}
 spec:
-  # 這將每1分鐘刷新一次金鑰。可以根據自己的要求保留時間。
+  # 這將「每1分鐘」刷新一次金鑰。可以根據自己的要求保留時間。
   refreshInterval: {{ .refreshInterval }}
   secretStoreRef:
     name: {{ .secretStoreRef.name }}
